<resources>
    <string name="app_name">ClienteCRUD</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="registrar">Registrar</string>
    <string name="requerido">El campo es requerido</string>
    <string name="existe_nombre_persona">El nombre de la persona es requerido</string>
    <string name="existe_apellido_persona">El apellido de la persona es requerido</string>
    <string name="existe_persona">La persona ya existe</string>
    <string name="consultar">Consultar</string>
    <string name="ingresar_identificador">Por favor ingresar un Identificador</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="datos_no_encontrados">Datos no encontrados</string>
    <string name="persona_actualizada">Los datos de la persona se actualizaron exitosamente</string>
    <string name="persona_no_actualizada">Los datos de la persona no se actualizaron</string>
    <string name="eliminar">Eliminar</string>
    <string name="persona_eliminada">La persona ha sido eliminada Exitosamente</string>
    <string name="gestion_personas">Gestión del personal</string>
    <string name="telefono">Teléfono</string>
    <string name="existe_telefono_persona">El teléfono de la persona es requerido</string>
</resources>
